# AI_Optimizer

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  intent.py  main.py  optimizer.py  tokens.py
backend/tests/: test_optimizer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AIModeSelector.tsx  ChartPreview.tsx  CustomizationPanel.tsx  DiffView.tsx  EnhancementsList.tsx  Header.tsx  HistoryDrawer.tsx  IntentBadges.tsx  MermaidPreview.tsx  ModeSelector.tsx  OptimizedOutput.tsx  PromptInput.tsx  TemplatesDrawer.tsx  TokenStats.tsx
frontend/src/lib/: api.ts  diff.test.ts  diff.ts  downloads.ts  intent.test.ts  intent.ts  optimizer.test.ts  optimizer.ts  storage.ts  templates.ts  tokens.ts
